@@ -35,31 +35,25 @@ namespace MeGUI
         {
             List<x264Device> x264DeviceList = new List<x264Device>();
             x264DeviceList.Add(new x264Device(0, "Default", -1, AVCLevels.Levels.L_UNRESTRICTED, -1, -1, -1, -1, -1, -1));
-            x264DeviceList.Add(new x264Device(1, "Android G1", 0, AVCLevels.Levels.L_30, 2500, 2500, 0, -1, 480, 368));
-            x264DeviceList.Add(new x264Device(2, "AVCHD", 2, AVCLevels.Levels.L_41, 14000, 14000, 3, 6, 1920, 1080));
-            x264DeviceList.Add(new x264Device(3, "Blu-ray", 2, AVCLevels.Levels.L_41, 30000, 40000, 3, 6, 1920, 1080));
-            x264DeviceList.Add(new x264Device(4, "DivX Plus HD", 2, AVCLevels.Levels.L_40, 25000, 20000, 3, -1, 1920, 1080));
+            x264DeviceList.Add(new x264Device(2, "AVCHD", 2, AVCLevels.Levels.L_41, 14000, 14000, 3, 6, 1920, 1080, true, -1, -1));
+            x264DeviceList.Add(new x264Device(3, "Blu-ray", 2, AVCLevels.Levels.L_41, 30000, 40000, 3, 6, 1920, 1080, true, 1, -1));
+            x264DeviceList.Add(new x264Device(4, "DivX Plus HD", 2, AVCLevels.Levels.L_40, 25000, 20000, 3, -1, 1920, 1080, false, 4, -1));
             x264DeviceList.Add(new x264Device(5, "DXVA", 2, AVCLevels.Levels.L_41, -1, -1, -1, -1, -1, -1));
-            x264DeviceList.Add(new x264Device(6, "iPad", 2, AVCLevels.Levels.L_31, -1, -1, -1, -1, 1024, 768));
-            x264DeviceList.Add(new x264Device(7, "iPhone", 0, AVCLevels.Levels.L_30, 10000, 10000, 0, -1, 480, 320));
-            x264DeviceList.Add(new x264Device(8, "iPhone 4", 1, AVCLevels.Levels.L_31, -1, -1, -1, -1, 960, 640));
-            x264DeviceList.Add(new x264Device(9, "iPod", 0, AVCLevels.Levels.L_30, 10000, 10000, 0, 5, 320, 240));
-            x264DeviceList.Add(new x264Device(10, "Nokia N8", 2, AVCLevels.Levels.L_31, -1, -1, -1, -1, 640, 360));
-            x264DeviceList.Add(new x264Device(11, "Nokia N900", 0, AVCLevels.Levels.L_30, -1, -1, -1, -1, 800, 480));
+            x264DeviceList.Add(new x264Device(7, "iPhone 2G", 0, AVCLevels.Levels.L_13, -1, -1, 0, 1, 640, 480));
+            x264DeviceList.Add(new x264Device(8, "iPhone 4, iPad 1/2, iPod touch 4/5", 1, AVCLevels.Levels.L_31, -1, -1, -1, -1, 1280, 720));
+            x264DeviceList.Add(new x264Device(15, "iPhone 4S/5, iPad 3/4/mini, WDTV", 2, AVCLevels.Levels.L_41, -1, -1, -1, -1, 1920, 1080));
+            x264DeviceList.Add(new x264Device(9, "iPhone 3G/3GS, iPod classic, iPod touch 1/2/3, iPod nano 3/4/5", 0, AVCLevels.Levels.L_30, -1, -1, 0, 1, 640, 480));
+            x264DeviceList.Add(new x264Device(17, "iPod nano 7", 2, AVCLevels.Levels.L_30, -1, -1, -1, -1, 720, 576));
             x264DeviceList.Add(new x264Device(12, "PS3", 2, AVCLevels.Levels.L_41, 31250, 31250, -1, -1, 1920, 1080));
-            x264DeviceList.Add(new x264Device(13, "PSP", 1, AVCLevels.Levels.L_30, 10000, 10000, -1, 3, 480, 272));
+            x264DeviceList.Add(new x264Device(13, "PSP", 1, AVCLevels.Levels.L_30, 10000, 10000, -1, 3, 480, 272, false, -1, 0));
             x264DeviceList.Add(new x264Device(14, "Xbox 360", 2, AVCLevels.Levels.L_41, 24000, 24000, 3, 3, 1920, 1080));
-            x264DeviceList.Add(new x264Device(15, "WDTV", 2, AVCLevels.Levels.L_41, -1, -1, -1, -1, 1920, 1080));
-            x264DeviceList[2].MaxGOP = 1;
-            x264DeviceList[2].BluRay = true;
-            x264DeviceList[3].MaxGOP = 1;
-            x264DeviceList[3].BluRay = true;
-            x264DeviceList[4].MaxGOP = 4;
-            x264DeviceList[13].BPyramid = 0;
             return x264DeviceList;
         }
 
-        public x264Device(int iID, string strName, int iProfile, AVCLevels.Levels avcLevel, int iVBVBufsize, int iVBVMaxrate, int iBframes, int iReframes, int iMaxWidth, int iMaxHeight)
+        public x264Device(int iID, string strName, int iProfile, AVCLevels.Levels avcLevel, int iVBVBufsize, int iVBVMaxrate, int iBframes, int iReframes, int iMaxWidth, int iMaxHeight) : 
+            this(iID, strName, iProfile, avcLevel, iVBVBufsize, iVBVMaxrate, iBframes, iReframes, iMaxWidth, iMaxHeight, false, -1, -1) { }
+
+        public x264Device(int iID, string strName, int iProfile, AVCLevels.Levels avcLevel, int iVBVBufsize, int iVBVMaxrate, int iBframes, int iReframes, int iMaxWidth, int iMaxHeight, bool bBluRay, int iMaxGop, int iBPyramid)
         {
             this.iID = iID;
             this.strName = strName;
@@ -71,9 +65,9 @@ namespace MeGUI
             this.iReframes = iReframes;
             this.iMaxWidth = iMaxWidth;
             this.iMaxHeight = iMaxHeight;
-            this.bBluRay = false;
-            this.iBPyramid = -1;
-            this.iMaxGop = -1;
+            this.bBluRay = bBluRay;
+            this.iBPyramid = iBPyramid;
+            this.iMaxGop = iMaxGop;
         }
 
         public int ID
