@@ -1,3 +1,4 @@
+2334 [x264] extended apple device profile support and removed/merged some others
 2333 [x264] set AVC level, "zerolatency" and "fastdecode" effects also in the advanced settings
 2332 [x264] fixed AVC level 1.0 encoded as 1.1
 2331 [x264] fixed restricted vbv-bufsize value too low for some levels
